--- a/public/css/app.css
+++ b/public/css/app.css
@@ -466,6 +466,18 @@ textarea {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
+  margin: 10px;
+  resize: none;
+  border-radius: 3px;
+  border: 1px solid rgba(192, 195, 195, 0.668);
+  padding-left: 6px;
+}
+
+textarea.messenger-composer {
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
   width: 800px;
   margin: 10px;
   resize: none;
